bugfix(genshin-stats): fix horizontal scrollbar of the settings panel

--- a/packages/genshin-stats/src/styles/settings.scss
+++ b/packages/genshin-stats/src/styles/settings.scss
@@ -6,6 +6,7 @@ details.settings {
 
   .Box {
     width: auto;
+    overflow: hidden;
   }
 
   .Box-header {
